uipath-service/main/default/objects/CPQ_Controls__mdt/CPQ_Controls__mdt.object-meta.xml
<CustomObject>
    <label>CPQ Controls</label>
    <pluralLabel>CPQ Controls</pluralLabel>
</CustomObject>