uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Case_C_CaseTriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>Case_C_CaseTriggerHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should &apos;CaseTriggerHandler&apos; process case&apos; related to CPQ opportunities</inlineHelpText>
    <label>Case-C-CaseTriggerHandler</label>
    <type>Checkbox</type>
</CustomField>