uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Case_VR_CVR01_Finance_Opp_Fields__c.field-meta.xml
<CustomField>
    <fullName>Case_VR_CVR01_Finance_Opp_Fields__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case-VR-CVR01_Finance_Opp_Fields</label>
    <type>Checkbox</type>
</CustomField>