uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Case_VR_Statuses_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Case_VR_Statuses_Limitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFSL-855</description>
    <label>Case-VR-Statuses_Limitation</label>
    <type>Checkbox</type>
</CustomField>