uipath-service/main/default/objects/CPQ_Controls__mdt/fields/EN_CPQ_Template__c.field-meta.xml
<CustomField>
    <fullName>EN_CPQ_Template__c</fullName>
    <label>EN CPQ Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>