uipath-service/main/default/objects/CPQ_Controls__mdt/fields/JA_CPQ_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>JA_CPQ_Email_Template__c</fullName>
    <description>Store Name of Conga Composer Email template used for CPQ for Japan</description>
    <label>JA CPQ Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>