uipath-service/main/default/objects/CPQ_Controls__mdt/fields/JA_CPQ_Template__c.field-meta.xml
<CustomField>
    <fullName>JA_CPQ_Template__c</fullName>
    <label>JA CPQ Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>