uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OLI_C_OpportunityLineItemHelper__c.field-meta.xml
<CustomField>
    <fullName>OLI_C_OpportunityLineItemHelper__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should &apos;OpportunityLineItemHelper&apos; process OLI&apos;s related to CPQ opportunities</inlineHelpText>
    <label>OLI-C-OpportunityLineItemHelper</label>
    <type>Checkbox</type>
</CustomField>