uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_C_OpportunityListController__c.field-meta.xml
<CustomField>
    <fullName>Opp_C_OpportunityListController__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should &apos;OpportunityListController&apos; process CPQ opportunities</inlineHelpText>
    <label>Opp-C-OpportunityListController</label>
    <type>Checkbox</type>
</CustomField>