uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_C_SetPrimaryContactSchedulable__c.field-meta.xml
<CustomField>
    <fullName>Opp_C_SetPrimaryContactSchedulable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should &apos;SetPrimaryContactSchedulable&apos; process CPQ opportunities</inlineHelpText>
    <label>Opp-C-SetPrimaryContactSchedulable</label>
    <type>Checkbox</type>
</CustomField>