uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_CPQ_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_CPQ_Record_Type_Developer_Name__c</fullName>
    <defaultValue>&quot;CPQ&quot;</defaultValue>
    <inlineHelpText>The Developer Name for the Opportunity CPQ Record Name - this controls which opportunities are defined to be &apos;in-scope&apos; for the exclusion mechanism.</inlineHelpText>
    <label>CPQ Record Type Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>