uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Account_Industry_must_be_set__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Account_Industry_must_be_set__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should &apos;Account_Industry_must_be_set&apos; apply to CPQ opportunities</inlineHelpText>
    <label>Opp-VR-Account_Industry_must_be_set</label>
    <type>Checkbox</type>
</CustomField>