uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_At_Least_1_Preferred_Partner_Need__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_At_Least_1_Preferred_Partner_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp-VR-At_Least_1_Preferred_Partner_Need</label>
    <type>Checkbox</type>
</CustomField>