uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_BPO_MS_End_Customer_mandatory__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_BPO_MS_End_Customer_mandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-BPO_MS_End_Customer_mandatory</label>
    <type>Checkbox</type>
</CustomField>