uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_CannotCloseBeforeFinanceReviewRea__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_CannotCloseBeforeFinanceReviewRea__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-CannotCloseBeforeFinanceReviewRea</label>
    <type>Checkbox</type>
</CustomField>