uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Check_CompanyId_Value__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Check_CompanyId_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp-VR-Check_CompanyId_Value</label>
    <type>Checkbox</type>
</CustomField>