uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Closed_Lost_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Closed_Lost_Forecast_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp-VR-Closed_Lost_Forecast_Category</label>
    <type>Checkbox</type>
</CustomField>