uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Closed_Won_on_opp_creation__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Closed_Won_on_opp_creation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-Closed_Won_on_opp_creation</label>
    <type>Checkbox</type>
</CustomField>