uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Competition_for_Closed_Deals__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Competition_for_Closed_Deals__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-Competition_for_Closed_Deals</label>
    <type>Checkbox</type>
</CustomField>