uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Deal_Reg_Approved_without_account__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Deal_Reg_Approved_without_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp-VR-Deal_Reg_Approved_without_account</label>
    <type>Checkbox</type>
</CustomField>