uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Deal_Reg_Partner_Sales_Email_mand__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Deal_Reg_Partner_Sales_Email_mand__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Deal_Reg_Partner_Sales_Email_mand</label>
    <type>Checkbox</type>
</CustomField>