uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Demo_POC_restriction__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Demo_POC_restriction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Demo_POC_restriction</label>
    <type>Checkbox</type>
</CustomField>