uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Dropped_Reason_restricted_nondrop__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Dropped_Reason_restricted_nondrop__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-Dropped_Reason_restricted_nondrop</label>
    <type>Checkbox</type>
</CustomField>