uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Inside_Sales_cannot_edit_booked_o__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Inside_Sales_cannot_edit_booked_o__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-Inside_Sales_cannot_edit_booked_o</label>
    <type>Checkbox</type>
</CustomField>