uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Inside_Sales_Closed_Pending_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Inside_Sales_Closed_Pending_Stage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-Inside_Sales_Closed_Pending_Stage</label>
    <type>Checkbox</type>
</CustomField>