uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Opp_VR_Invoicing_contacts_must_have_emai__c.field-meta.xml
<CustomField>
    <fullName>Opp_VR_Invoicing_contacts_must_have_emai__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp-VR-Invoicing_contacts_must_have_emai</label>
    <type>Checkbox</type>
</CustomField>