uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Invoicing_Contacts_needed_before__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Invoicing_Contacts_needed_before__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Invoicing_Contacts_needed_before_</label>
    <type>Checkbox</type>
</CustomField>