uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_JP_Campaign_before_CW_Pending__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_JP_Campaign_before_CW_Pending__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-JP_Campaign_before_CW_Pending</label>
    <type>Checkbox</type>
</CustomField>