uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Lead_Source_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Lead_Source_Mandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Lead_Source_Mandatory</label>
    <type>Checkbox</type>
</CustomField>