uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Led_by_needs_to_be_completed__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Led_by_needs_to_be_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Led_by_needs_to_be_completed</label>
    <type>Checkbox</type>
</CustomField>