uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Mandatory_Partner_Involvement__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Mandatory_Partner_Involvement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Mandatory_Partner_Involvement</label>
    <type>Checkbox</type>
</CustomField>