uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Multiple_Implementation_Partners__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Multiple_Implementation_Partners__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Multiple_Implementation_Partners</label>
    <type>Checkbox</type>
</CustomField>