uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Multiple_preferred_partners__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Multiple_preferred_partners__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Multiple_preferred_partners</label>
    <type>Checkbox</type>
</CustomField>