uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_No_Opps_on_COE__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_No_Opps_on_COE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-No_Opps_on_COE</label>
    <type>Checkbox</type>
</CustomField>