uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Opportunity_Creation_Limitation__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Opportunity_Creation_Limitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Opportunity_Creation_Limitation</label>
    <type>Checkbox</type>
</CustomField>