uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_OVR01_Closed_Won_Booked_Contract__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_OVR01_Closed_Won_Booked_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-OVR01_Closed_Won_Booked_Contract_</label>
    <type>Checkbox</type>
</CustomField>