uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_OVR02_Update_Product_Version__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_OVR02_Update_Product_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-OVR02_Update_Product_Version</label>
    <type>Checkbox</type>
</CustomField>