uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_OVR03_Update_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_OVR03_Update_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-OVR03_Update_End_Date</label>
    <type>Checkbox</type>
</CustomField>