uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Partner_Account_no_Direct_sale__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Partner_Account_no_Direct_sale__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Partner_Account_no_Direct_sale</label>
    <type>Checkbox</type>
</CustomField>