uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Prevent_drop_in_advanced_stage__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Prevent_drop_in_advanced_stage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Prevent_drop_in_advanced_stage</label>
    <type>Checkbox</type>
</CustomField>