uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Prevent_moving_to_higher_than_Pro__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Prevent_moving_to_higher_than_Pro__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Prevent_moving_to_higher_than_Pro</label>
    <type>Checkbox</type>
</CustomField>