uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Prevent_opps_without_products__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Prevent_opps_without_products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Prevent_opps_without_products</label>
    <type>Checkbox</type>
</CustomField>