uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Resale_Sold_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Resale_Sold_To_Partner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Resale_Sold_To_Partner</label>
    <type>Checkbox</type>
</CustomField>