uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Restrict_ClosedLost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Restrict_ClosedLost_Opportunities__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Restrict_ClosedLost_Opportunities</label>
    <type>Checkbox</type>
</CustomField>