uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Restrict_deal_type_for_customer_a__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Restrict_deal_type_for_customer_a__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Restrict_deal_type_for_customer_a</label>
    <type>Checkbox</type>
</CustomField>