uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Restrict_Edit_for_Japan_opps_only__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Restrict_Edit_for_Japan_opps_only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Restrict_Edit_for_Japan_opps_only</label>
    <type>Checkbox</type>
</CustomField>