uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Sales_cannot_move_back_from_close__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Sales_cannot_move_back_from_close__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Sales_cannot_move_back_from_close</label>
    <type>Checkbox</type>
</CustomField>