uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Sales_cannot_select_Closed_Won_Bo__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Sales_cannot_select_Closed_Won_Bo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Sales_cannot_select_Closed_Won_Bo</label>
    <type>Checkbox</type>
</CustomField>