uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_SGD_currency_for_Government_only__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_SGD_currency_for_Government_only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-SGD_currency_for_Government_only</label>
    <type>Checkbox</type>
</CustomField>