uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Single_Preferred_Partner_Opportun__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Single_Preferred_Partner_Opportun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Single_Preferred_Partner_Opportun</label>
    <type>Checkbox</type>
</CustomField>