uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Type_cannot_be_New_Business_for_e__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Type_cannot_be_New_Business_for_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Type_cannot_be_New_Business_for_e</label>
    <type>Checkbox</type>
</CustomField>