uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Type_must_be_set_when_no_longer_S__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Type_must_be_set_when_no_longer_S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Type_must_be_set_when_no_longer_S</label>
    <type>Checkbox</type>
</CustomField>