uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Value_Drivers_Other_2__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Value_Drivers_Other_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Value_Drivers_Other_2</label>
    <type>Checkbox</type>
</CustomField>