uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Win_Loss_Reason3_Mandatory_on_clo__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Win_Loss_Reason3_Mandatory_on_clo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Win_Loss_Reason3_Mandatory_on_clo</label>
    <type>Checkbox</type>
</CustomField>