uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Win_Loss_Reason_details_1__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Win_Loss_Reason_details_1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OPP-VR-Win_Loss_Reason_details_1</label>
    <type>Checkbox</type>
</CustomField>