uipath-service/main/default/objects/CPQ_Controls__mdt/fields/OPP_VR_Won_opportunities_require_amount__c.field-meta.xml
<CustomField>
    <fullName>OPP_VR_Won_opportunities_require_amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP-VR-Won_opportunities_require_amount</label>
    <type>Checkbox</type>
</CustomField>