uipath-service/main/default/objects/CPQ_Controls__mdt/fields/Product_Premium_Care_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Premium_Care_Name__c</fullName>
    <defaultValue>&quot;UiPath Premium Care&quot;</defaultValue>
    <description>SFSL-532</description>
    <label>Product Premium Care Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>